--- a/index.html
+++ b/index.html
@@ -3,27 +3,34 @@
     <head>
         <title>Timestamp Microservice</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="main.css"
     </head>
     <body>
         <div class="container">
             <h1>Timestamp Microservice</h1>
-            <p>By Joe McIlhargey | <a>GitHub</a></p>
+            <p>By Joe McIlhargey | <a href="https://github.com/jmcilhargey/timestamp-microservice" target="_blank">GitHub</a></p>
             <form method="post" action="/">
-                <input type="text" name="info">
-                <input type="submit">
+                <div class="input-group">
+                    <span class="input-group-addon">https://timestamp-service-api.herokuapp.com/</span> 
+                    <input type="text" class="form-control" name="info">
+                </div>
+                <button type="submit" class="btn btn-default">Go</button>                
             </form>
             <blockquote>
                 <ul>
                     <li>Enter a date in either standard format (January 1, 2016) or unix format (1451606400)</li>
-                    <li>The service will return a JSON with the date in both standard and unix formats</li>
-                    <li>You can also enter the date as a parameter in the website URL</li>
+                    <li>Date can be entered into form field or website URL</li>
+                    <li>The service will return a JSON with the date in standard and unix format</li>
+                    <li>If date is invalid format, the service will return JSON with null values</li>
                 </ul>
             </blockquote>
+            
             <h3>Example Input</h3>
-            <code>Testing</code>
-            <code>Testing</code>
+            <p>Einstein's B-day / PI Day</p>
+            <code>https://timestamp-service-api.herokuapp.com/March, 14 2016</code><br>
+            <code>https://timestamp-service-api.herokuapp.com/1457913600</code>
             <h3>Example Output</h3>
-            <code>Testing</code>
+            <code>{ "unix": 1457913600, "standard": "March 16, 2016" }</code><br>
         </div>
         
     </body>
